--- a/2022/Day 01.ipynb
+++ b/2022/Day 01.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('day01.txt', 'r') as file:\n",
+    "with open('data/day01.txt', 'r') as file:\n",
     "    lines = file.readlines()"
    ]
   },
