--- a/2022/Day 02.ipynb
+++ b/2022/Day 02.ipynb
@@ -10,7 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
+   "id": "2a708bfe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.day02 import parse_left_move, parse_right_move\n",
+    "from utils.day02 import move_score, outcome_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "44a8890b",
    "metadata": {},
    "outputs": [],
@@ -22,63 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "2a708bfe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def parse_left_move(s):\n",
-    "    if s == \"A\":\n",
-    "        return \"Rock\"\n",
-    "    elif s == \"B\":\n",
-    "        return \"Paper\"\n",
-    "    elif s == \"C\":\n",
-    "        return \"Scissors\"\n",
-    "    raise ValueError(s + \" is invalid.\")\n",
-    "    \n",
-    "def parse_right_move(s):\n",
-    "    if s == \"X\":\n",
-    "        return \"Rock\"\n",
-    "    elif s == \"Y\":\n",
-    "        return \"Paper\"\n",
-    "    elif s == \"Z\":\n",
-    "        return \"Scissors\"\n",
-    "    raise ValueError(s + \" is invalid.\")\n",
-    "    \n",
-    "def move_score(move):\n",
-    "    if move == \"Rock\":\n",
-    "        return 1\n",
-    "    elif move == \"Paper\":\n",
-    "        return 2\n",
-    "    elif move == \"Scissors\":\n",
-    "        return 3\n",
-    "    \n",
-    "    raise ValueError(move + \" is invalid.\")\n",
-    "    \n",
-    "def outcome_score(outcome):\n",
-    "    if outcome == \"Lose\":\n",
-    "        return 0\n",
-    "    elif outcome == \"Tie\":\n",
-    "        return 3\n",
-    "    elif outcome == \"Win\":\n",
-    "        return 6\n",
-    "    raise ValueError(outcome + \" is invalid.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "fec89fd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('day02.txt', 'r') as file:\n",
+    "with open('data/day02.txt', 'r') as file:\n",
     "    lines = file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "c6168a24",
    "metadata": {},
    "outputs": [],
@@ -102,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "e503f441",
    "metadata": {},
    "outputs": [
@@ -112,7 +78,7 @@
        "14069"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,25 +97,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "4b37a582",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def parse_right_outcome(s):\n",
-    "    if s == \"X\":\n",
-    "        return \"Lose\"\n",
-    "    elif s == \"Y\":\n",
-    "        return \"Tie\"\n",
-    "    elif s == \"Z\":\n",
-    "        return \"Win\"\n",
-    "    \n",
-    "    raise ValueError(f\"{s} is invalid\")"
+    "from utils.day02 import parse_right_outcome"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "4d7db3ff",
    "metadata": {},
    "outputs": [],
@@ -161,18 +119,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "id": "3aadb49a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('day02.txt', 'r') as file:\n",
+    "with open('data/day02.txt', 'r') as file:\n",
     "    lines = file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "a727b8df",
    "metadata": {},
    "outputs": [],
@@ -196,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "e0fda4e9",
    "metadata": {},
    "outputs": [
@@ -206,7 +164,7 @@
        "12411"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
