--- a/2022/Day 03.ipynb
+++ b/2022/Day 03.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "2be68fe7",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "id": "1ccaae2a",
    "metadata": {},
    "outputs": [],
@@ -53,18 +53,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "id": "1282b4c8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('day03.txt', 'r') as file:\n",
+    "with open('data/day03.txt', 'r') as file:\n",
     "    lines = file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "id": "391a9583",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "id": "320a70c6",
    "metadata": {},
    "outputs": [
@@ -96,7 +96,7 @@
        "8243"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "id": "af651b63",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "d3fb1efb",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "87ae14b4",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
        "2631"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
