--- a/2022/Day 04.ipynb
+++ b/2022/Day 04.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "04625e52",
    "metadata": {},
    "outputs": [],
@@ -32,18 +32,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "705701bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('day04.txt', 'r') as file:\n",
+    "with open('data/day04.txt', 'r') as file:\n",
     "    lines = file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "50f1051f",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "46b43b2f",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "599"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "id": "3c77dbbf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('day04.txt', 'r') as file:\n",
+    "with open('data/day04.txt', 'r') as file:\n",
     "    lines = file.readlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "id": "5f4db1da",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "id": "7832e876",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
        "928"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,6 +146,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "91f5e356",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f24202d",
    "metadata": {},
    "outputs": [],
    "source": []
